--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: meteor-application-template-react
-description: A template for quickly starting Meteor application development
+title: digits
+description: An simple application for storing contacts
 google_analytics:
 show_downloads: true
 theme: jekyll-theme-cayman
