--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: digits
-description: An simple application for storing contacts
+description: A simple application for storing contacts
 google_analytics:
 show_downloads: true
 theme: jekyll-theme-cayman
